--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@
       </div>
 
       <div class="hero--button--container">
-        <button class="btn hero--btn--left">
-          Download <span>v1.3</span>
-        </button>
+        <button class="btn hero--btn--left">Download <span>v1.3</span></button>
         <button class="btn hero--btn--right">What is it?</button>
       </div>
     </div>
