aligned mobile view to remove space on left side

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </section>
     <section class="hero">
       <img
-        class="hero--img--left"
+        class="img hero--img--left"
         src="assets/desktop/image-hero-left.png"
         alt="logo"
       />
@@ -42,7 +42,7 @@
       </div>
 
       <img
-        class="hero--img--right"
+        class="img hero--img--right"
         src="assets/desktop/image-hero-right.png"
         alt="logo"
       />
